styles.css
html, body {
    margin: 0;
    padding: 0;
    font-family: Arial, sans-serif;
    overflow-x: hidden; 
    scroll-behavior: smooth;
}

@font-face {
    font-family: 'Century Gothic Std';
    src: url('fonts/Century_Gothic_Std.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
}

p {
    font-family: 'Century Gothic Std', sans-serif;
    font-weight: 400;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    right: 10%;
    top: 30px;
    left: 10%;
    z-index: 1; 
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.5vh;
    width: 100%;
}

nav a {
    color: white;
    text-decoration: none;
    font-size: calc(0.6em + 1vw);
    transition: 0.3s ease;
    font-family: 'Century Gothic Std', sans-serif;
}

nav a.active {
    border-bottom: 2px solid white;
}

nav a:hover{
    color: #b3b3b3;
    border-bottom-color: #b3b3b3;
}

section{
    position: relative;
    display: flex;
    height: 100vh;
    overflow: hidden;
}

.background-inicio {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: url('images/BACKGROUND.webp');
    background-size: cover;
    background-position: center;
    object-position: center bottom;
}

.overlay-inicio {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    background-color: rgba(43, 43, 43, 0.2);
}

.content-inicio {
    display: flex;
    flex-direction: column;
    position: relative;
    margin-left: 8%;
    color: white;
    align-items: left;
    top: 45%;
}

.content-inicio img {
    display: flex;
    width: 35vw;
    height: 9vw;
    max-width: 95%; 
    margin-bottom: 4em; 
}

.content-inicio p {
    margin: 0;
    margin-bottom: 1em;
    font-size: 3.0vh;
}

#servicios {
    background-color: #605e5c;
    align-items: center;
}

#galeria {
    display: flex;
    background-color: #605e5c;
    align-items: center;
    justify-content: center;
    z-index: 0;
}

.swiper-slide{
    display: flex !important;
    align-items: center;
    justify-content:center;
}

.swiper-button-next{
    color: white !important;
    margin-right: 2vw;
}

.swiper-button-prev{
    color: white !important;
    margin-left: 2vw;
}

.swiper-pagination-bullet {
    background-color: white !important;
}

.gallery-image {
    height: 65vh;
    width: 65vw;
    object-fit: cover;
    max-width: 80vw;
    max-height: 100%;
    transition: transform 0.5s ease-in-out;
}

.container {
	width: 100%;
    height: 25%;
    margin: 0 auto;
	display: grid;
    grid-template-rows: 1fr;
    grid-template-columns: repeat(4, 1fr);
    gap: 5%;
    padding: 5%;
    margin-top: 5%;
}

.container div{
    display: flex;
    justify-content: center;
    align-items: center; 
    height: 100%;
	padding: 5%;
	font-size: 3.5vh;
	font-family: 'Century Gothic Std', sans-serif;
	color: white;
    background-color: #86837d;
    border-radius: 1.5rem;
}

footer{
    background-color: #86837d;
    color: white;
    font-size: 2.7vh;
    width: 100%;
}

.top-footer {
    height: 15vh;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}

.top-footer img {
    margin-top: 15vh;
    display: flex;
    height: 70%;
}

.direction {
    line-height: 50%;
}

.direction svg {
    margin-top: 10vh;
    height: 11%;
    width: 11%;
}

.telephone {
    line-height: 50%;
}

.telephone svg {
    margin-top: 10vh;
    height: 25%;
    width: 25%;
}

.horario {
    line-height: 50%;
}

.horario svg {
    margin-top: 10vh;
    height: 11%;
    width: 11%;
}

.bottom-footer {
    font-size: 1.9vh;
    margin-top: 10vh;
    height: 8vh;
    display: flex;
    justify-content: center;
}

.bottom-footer a:link,
.bottom-footer a:visited  {
    color: white;
    text-decoration: underline;
}

/* Media query para teléfonos */
@media only screen and (max-width: 650px) {
    nav a{
        font-size: 1.2em;
    }
    .content-inicio {
        top: 50%;
    }
    .content-inicio img{
        display: flex;
        width: 40vh;
        height: 11vh;
    }
    .content-inicio p {
        font-size: 2.5vh;
    }
    footer {
        font-size: 2.2vh;
        padding: 5%;
    }
    .top-footer{
        align-items: center;
        justify-content: left;
        width: 68%;
        flex-wrap: wrap;
        padding: 15%;
    }
    .top-footer img {
        height: 30%;
        margin-top: 0;
    }
    .direction svg{
        margin-top: 7vh;
        line-height: 100%;
    }
    .telephone svg{
        margin-top: 5vh;
        line-height: 100%;
    }
    .horario svg{
        margin-top: 5vh;
        line-height: 100%;
    }
    .bottom-footer{
        font-size: 1.6vh;
        margin-top: 35vh;
        padding: 10%;
        width: 80%;
        height: 3vh;
    }
}

  

